
[package]
name = "quantedge-ta"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "A streaming technical analysis library for Rust"
repository = "https://github.com/dluksza/quantedge-ta"
keywords = ["technical-analysis", "trading", "indicators", "finance"]
categories = ["finance", "mathematics", "algorithms"]
readme = "README.md"
exclude = [".github/", "tests/"]

[dev-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "indicators"
harness = false

[lib]
bench = false

[profile.bench]
codegen-units = 1
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
